[gd_scene load_steps=2 format=3 uid="uid://dlnlbjrqd3qau"]

[ext_resource type="Script" path="res://components/componentScripts/changelog.gd" id="1_r0mnw"]

[node name="Changelog" type="Label"]
custom_minimum_size = Vector2(110, 33)
offset_right = 114.0
offset_bottom = 33.0
mouse_filter = 0
theme_type_variation = &"LabelTitle"
text = "Changelog"
horizontal_alignment = 1
script = ExtResource("1_r0mnw")

[node name="ChangelogPanel" type="PanelContainer" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_left = 117.0
offset_right = 231.0
offset_bottom = 14.0

[node name="M" type="MarginContainer" parent="ChangelogPanel"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2

[node name="S" type="ScrollContainer" parent="ChangelogPanel/M"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="H" type="HFlowContainer" parent="ChangelogPanel/M/S"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="focus_entered" from="ChangelogPanel" to="." method="_on_changelog_panel_focus_entered"]
[connection signal="focus_exited" from="ChangelogPanel" to="." method="_on_changelog_panel_focus_exited"]
[connection signal="mouse_entered" from="ChangelogPanel" to="." method="_on_changelog_panel_mouse_entered"]
[connection signal="mouse_exited" from="ChangelogPanel" to="." method="_on_changelog_panel_mouse_exited"]
